Fix landscape mode on mobile device

--- a/css/components.css
+++ b/css/components.css
@@ -12,7 +12,7 @@
 }
 
 .jumbotron {
-    height: 25vh;
+    height: 12rem;
 }
 
 .mw-50r {
